Fix detail surat squashed

--- a/view/style/less/stylesheet.less
+++ b/view/style/less/stylesheet.less
@@ -667,6 +667,7 @@ textarea {
                     padding: 16px;
                     max-width: 500px;
                     background-color: white;
+                    flex-shrink: 0;
                     align-self: stretch;
                     border: 1px solid @border-dark;
                     >div {
